lagt til jødedomm siden

--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -23,7 +23,7 @@
 <%= render 'shared/page_header' %>
 <!--HEADER END-->
 
-<section id="test">
+<section class="test">
   <div class="row" id="mainMenu">
     <div class="large-3 medium-6 small-6 columns">
       <img src="/assets/barn/RLE/logo_liten.png" alt="logo">
@@ -65,7 +65,7 @@
       
       <div class="large-3 small-6 medium-4 columns">
         <div id="align_center" class="align-center">
-          <a href="jodedom.html"><img src="/assets/barn/RLE/jøde.png" alt="Jødedommenbilde"></a>
+          <a href="/static_pages/barn/rle/jodedom"><img src="/assets/barn/rle/jøde.png" alt="Jødedommenbilde"></a>
         </div>
       </div>
 
