--- a/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jødedommen</title>
-  <link rel="stylesheet" href="/assets/barn/jodedommen.css" />
+  <link rel="stylesheet" href="/assets/barn/religion.css" />
   <style>
         body {
           background: url("/assets/barn/jodedommen/jodebkg.jpg") no-repeat;
@@ -29,67 +29,66 @@
       <img src="/assets/barn/RLE/logo_liten.png" alt="logo">
     </div>
 
-      <div class="large-3 medium-6 small-6 columns">
-        <a href="./rle.html"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake"></a>
-      </div>
+    <div class="large-3 medium-6 small-6 columns">
+      <a href="/static_pages/barn/rle"><img id="backArrow" src="/assets/barn/arrowback.png" alt="Pil tilbake"></a>
+    </div>
   </div>
 
   <div class="row">
     <div class="large-12 columns">
       <h1 class="fagh">JØDEDOMMEN</h1>
-            </div>
-        </div>
+    </div>
+  </div>
 
+  <div class="test">
 
-        <div class="row">
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="/assets/barn/jodedommen/jode.png" alt="Jødedommen bilde">
-                </div>
-            </div>
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="/assets/barn/jodedommen/kippa.png" alt="Kippa bilde">
-                </div>
-            </div>
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="/assets/barn//jodedommen/bonn.png" alt="Bønn film">
-                </div>
-            </div>
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="/assets/barn/jodedommen/tora.png" alt="Tora film">
-                </div>
-            </div>
-        </div>
+    <div class="row">
 
-        <div class="row">
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="/assets/barn/jodedommen/shema.png" alt="Shema film">
-                </div>
-            </div>
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="/assets/barn/jodedommen/filmoppgaver.png" alt="Filmoppgaver bilde">
-                </div>
-            </div>
+      <div class="large-3 small-6 medium-3 columns">
+          <div class="align-center" id="align_center">
+              <img src="/assets/barn/jodedommen/jode.png" alt="Jødedommen bilde">
+          </div>
+      </div>
 
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="/assets/barn/jodedommen/tegn.png" alt="Film med tegnspråk">
-                </div>
-            </div>
-            <div class="large-3"></div>
+      <div class="large-3 small-6 medium-3 columns">
+          <div class="align-center" id="align_center">
+              <img src="/assets/barn/jodedommen/kippa.png" alt="Kippa bilde">
+          </div>
+      </div>
 
-        </div>
+      <div class="large-3 small-6 medium-3 columns">
+          <div class="align-center" id="align_center">
+              <img src="/assets/barn//jodedommen/bonn.png" alt="Bønn film">
+          </div>
+      </div>
+
+      <div class="large-3 small-6 medium-3 columns">
+          <div class="align-center" id="align_center">
+              <img src="/assets/barn/jodedommen/tora.png" alt="Tora film">
+          </div>
       </div>
   </div>
 
-      
-  </div>
+  <div class="row">
+      <div class="large-3 small-6 medium-3 columns">
+          <div class="align-center" id="align_center">
+              <img src="/assets/barn/jodedommen/shema.png" alt="Shema film">
+          </div>
+      </div>
 
+      <div class="large-3 small-6 medium-3 columns">
+          <div class="align-center" id="align_center">
+              <img src="/assets/barn/jodedommen/filmoppgaver.png" alt="Filmoppgaver bilde">
+          </div>
+      </div>
+
+      <div class="large-6 small-12 medium-5 columns">
+          <div class="align-center" id="align_center">
+              <img src="/assets/barn/jodedommen/tegn.png" alt="Film med tegnspråk">
+          </div>
+      </div>
+   </div>
+   
   </div>
 </section>
 
