--- a/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
@@ -37,35 +37,35 @@
 
   <div class="row">
     <div class="large-3 small-6 medium-4 columns">
-      <div class="align-center" id="align_center">
+      <div class="align-center bilde-hover">
         <img src="/assets/barn/hinduisme/shiva.png" alt="Shiva bilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
-      <div class="align-center" id="align_center">
+      <div class="align-center bilde-hover">
         <img src="/assets/barn/hinduisme/ganesha.png" alt="Ganesha bilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
-      <div class="align-center" id="align_center">
+      <div class="align-center bilde-hover">
         <img src="/assets/barn/hinduisme/murugan.png" alt="Murugan bilde">
       </div>
     </div>
     <div class="large-3 small-6 medium-4 columns">
-      <div class="align-center" id="align_center">
+      <div class="align-center bilde-hover">
         <img src="/assets/barn/hinduisme/durga.png" alt="Durga bilde">
       </div>
     </div>
 
 
     <div class="large-3 small-6 medium-4 columns">
-      <div class="align-center" id="align_center">
+      <div class="align-center bilde-hover">
         <img src="/assets/barn/hinduisme/film.png" alt="Film oppgaver-bilde">
       </div>
     </div>
 
     <div class="large-3 small-6 medium-4 columns">
-      <div class="align-center" id="align_center">
+      <div class="align-center bilde-hover">
         <img src="/assets/barn/hinduisme/tegn.png" alt="Film med tegnspråk">
       </div>
     </div>
