--- a/Salabytest/app/views/static_pages/index.html.erb
+++ b/Salabytest/app/views/static_pages/index.html.erb
@@ -10,7 +10,7 @@
 
 <body>
 
-<img src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">    
+<img src="/assets/barn/skoleveien.jpg" id="background_image" alt="bakgrunnsbilde">    
     
 <!--ADULT SECTION-->
 <div id="adultSection">
