--- a/Salabytest/app/views/users/_form.html.erb
+++ b/Salabytest/app/views/users/_form.html.erb
@@ -18,7 +18,7 @@
         <label>Gjenta passordet</label>
         <%= f.password_field :password_confirmation %>
 
-        <%= f.submit "Lag konto", class: "btn btn-primary" %>
+        <%= f.submit "Lag konto", class: "button expand" %>
     <% end %>
   </div>
 </div>
