--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -45,56 +45,56 @@
     <div class="row">
 
       <div class="large-3 small-6 medium-4 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center  bilde-hover">
           <a href="hinduisme.html"><img src="/assets/barn/RLE/hinduisme.png" alt="Hinduismebilde">
           </a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center  bilde-hover">
           <a href="islam.html"><img src="/assets/barn/RLE/islam.png" alt="Islambilde"> </a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center  bilde-hover">
           <img src="/assets/barn/RLE/kristendom.png" alt="Kristendombilde">
         </div>
       </div>
       
       <div class="large-3 small-6 medium-4 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center  bilde-hover">
           <a href="/static_pages/barn/rle/jodedom"><img src="/assets/barn/rle/jøde.png" alt="Jødedommenbilde"></a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center  bilde-hover">
           <img src="/assets/barn/RLE/budd.png" alt="Buddhismebilde">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center  bilde-hover">
           <img src="/assets/barn/RLE/sikhisme.png" alt="Sikhismebilde">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center  bilde-hover">
           <img src="/assets/barn/RLE/etikk.png" alt="Etikkbilde">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center  bilde-hover">
           <img src="/assets/barn/RLE/kirke.png" alt="Kirkebilde">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center  bilde-hover">
           <img src="/assets/barn/RLE/kunst2.png" alt="Kunstbilde">
         </div>
       </div>
