--- a/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
@@ -45,25 +45,25 @@
     <div class="row">
 
       <div class="large-3 small-6 medium-3 columns">
-          <div class="align-center" id="align_center">
+          <div class="align-center bilde-hover">
               <img src="/assets/barn/jodedommen/jode.png" alt="Jødedommen bilde">
           </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-          <div class="align-center" id="align_center">
+          <div class="align-center bilde-hover">
               <img src="/assets/barn/jodedommen/kippa.png" alt="Kippa bilde">
           </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-          <div class="align-center" id="align_center">
+          <div class="align-center bilde-hover">
               <img src="/assets/barn//jodedommen/bonn.png" alt="Bønn film">
           </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-          <div class="align-center" id="align_center">
+          <div class="align-center bilde-hover">
               <img src="/assets/barn/jodedommen/tora.png" alt="Tora film">
           </div>
       </div>
@@ -71,19 +71,19 @@
 
   <div class="row">
       <div class="large-3 small-6 medium-3 columns">
-          <div class="align-center" id="align_center">
+          <div class="align-center bilde-hover">
               <img src="/assets/barn/jodedommen/shema.png" alt="Shema film">
           </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-          <div class="align-center" id="align_center">
+          <div class="align-center bilde-hover">
               <img src="/assets/barn/jodedommen/filmoppgaver.png" alt="Filmoppgaver bilde">
           </div>
       </div>
 
       <div class="large-6 small-12 medium-5 columns">
-          <div class="align-center" id="align_center">
+          <div class="align-center bilde-hover">
               <img src="/assets/barn/jodedommen/tegn.png" alt="Film med tegnspråk">
           </div>
       </div>
