--- a/Salabytest/app/views/static_pages/barn/islam.html.erb
+++ b/Salabytest/app/views/static_pages/barn/islam.html.erb
@@ -44,25 +44,25 @@
 
   <div class="row">
       <div class="large-3 small-6 medium-3 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/fbonn.png" alt="Forberede bønn film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-        <div id="align_center" class="align-center"> 
+        <div class="align-center bilde-hover"> 
            <img src="/assets/barn/islam/bonn.png" alt="Bønn film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/bonnest.png" alt="Bønnestillinger film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/bonnetelt.png" alt="Bønnetelt film">
         </div>
       </div>
@@ -70,25 +70,25 @@
 
   <div class="row">
       <div class="large-3 small-6 medium-3 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/mihrab.png" alt="Mihrab film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/minraet.png" alt="Minraet film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/kalligrafi.png" alt="Kalligrafi film">
         </div>
       </div>
 
       <div class="large-3 small-6 medium-3 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/kvinnedelen.png" alt="Kvinnedelen film">
         </div>
       </div>
@@ -96,13 +96,13 @@
 
   <div class="row">
       <div class="large-6 small-6 medium-3 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/film.png" alt="Film oppgaver">
         </div>
       </div>
 
       <div class="large-6 small-6 medium-3 columns">
-        <div id="align_center" class="align-center">
+        <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/tegn.png" alt="Film med tegnspråk">
         </div>
       </div>
