fikset mobilversjonen på islam siden

--- a/Salabytest/app/views/static_pages/barn/islam.html.erb
+++ b/Salabytest/app/views/static_pages/barn/islam.html.erb
@@ -49,6 +49,10 @@
         </div>
       </div>
 
+      <div class="small-3">
+        <div class="align-center bilde-hover"></div>
+      </div>
+
       <div class="large-3 small-6 medium-3 columns">
         <div class="align-center bilde-hover"> 
            <img src="/assets/barn/islam/bonn.png" alt="Bønn film">
@@ -95,19 +99,17 @@
   </div>
 
   <div class="row">
-      <div class="large-6 small-6 medium-3 columns">
+      <div class="large-6 small-6 medium-5 columns">
         <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/film.png" alt="Film oppgaver">
         </div>
       </div>
 
-      <div class="large-6 small-6 medium-3 columns">
+      <div class="large-6 small-6 medium-5 columns">
         <div class="align-center bilde-hover">
             <img src="/assets/barn/islam/tegn.png" alt="Film med tegnspråk">
         </div>
       </div>
-      <div class="large-3 small-6 medium-3 columns"></div>
-      <div class="large-3 small-6 medium-3 columns"></div>
   </div>
 
   </div>
