--- a/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
@@ -22,7 +22,7 @@
 <!--HEADER-->
 <%= render 'shared/page_header' %>
 <!--HEADER END-->
-
+<div id ="wrapper">
 <section class="test">
   <div class="row" id="mainMenu">
     <div class="large-3 medium-6 small-6 columns">
@@ -91,6 +91,7 @@
    
   </div>
 </section>
+    </div>
 
 <!-- Footer -->
 
