--- a/Salabytest/app/views/users/edit.html.erb
+++ b/Salabytest/app/views/users/edit.html.erb
@@ -21,9 +21,9 @@
         <div class="large-12 columns">
             <div class="panel">
                 <div id="userInfo">
-                        <h1>Editing user</h1>
+                        <h1>Endre instillinger</h1>
 
-                            <%= render 'form' %>
+                            <%= render 'form_edit' %>
 
                             <%= link_to 'Vis Brukere', @user %> |
                             <%= link_to 'Tilbake', users_path %>
