--- a/Salabytest/app/views/shared/_page_header_info.html.erb
+++ b/Salabytest/app/views/shared/_page_header_info.html.erb
@@ -29,7 +29,7 @@
               <a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000">
                   Bruker <b class="caret"></b></a>
                 <ul id="hover1" class="f-dropdown" data-dropdown-content>
-                    <li><%=link_to "Min Side", users_path %></li>
+                    <li><%=link_to "Min Side", user_path(current_user) %></li>
                     <li class="divider"></li>
                     <li><%= link_to "Logg ut", logout_path %></li>
             </ul>
