fjernet loren ipsum på forside.html.erb

--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -93,7 +93,17 @@
         <article>
           <h3>OVERSKRIFT 3</h3>
           <img class="articleImg" src="/assets/voksen/nyheter/budd.png" />
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+          <p>Salaby er et digitalt læremiddel i alle fag for 1.-7. trinn og for alle aldergrupper i barnehagen.
+
+Salaby inneholder mer enn 4000 læringselementer fordelt på de ulike fagene. Rammen rundt innholdet er byen Salaby og karakterene som bor der. Alt innhold er utviklet av norske pedagoger og fagfolk. Salaby er lisensbasert.
+
+Salaby har fire hovedportaler for 1. - 4. trinn:
+- Sirkus (Skolestart)
+- Skoleveien (1. - 2. trinn)
+- Byparken (3. - 4. trinn)
+- Biblioteket (1. - 4. trinn)
+
+Kanal S er den nye hovedportalen for 5. - 7. trinn.</p>
         </article>
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
@@ -102,7 +112,9 @@
         <article>
           <h3>OVERSKRIFT 3</h3>
           <img class="articleImg" src="/assets/voksen/nyheter/budd.png" />
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+          <p>Denne uken var ulike norske aktører invitert til å være med å diskutere hvordan innovative løsninger kan bidra til at verden når FN-målet om å utrydde all ekstrem fattigdom i verden innen 2030.
+Vi var med, og snakket blant om hvordan Salaby brukes i Norge og utlandet. Mange spennende diskusjoner, og stas med så mye på fokus på viktigheten av utdanning som virkemiddel for å utrydde fattigdom!
+På konferansen møtte vi også utenriksminister Børge Brende, her tester han ferdigheter i Salaby.</p>
         </article>
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
