fjernet loren ipsum på div. sider

--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -93,15 +93,10 @@
         <article>
           <h3>OVERSKRIFT 3</h3>
           <img class="articleImg" src="/assets/voksen/nyheter/budd.png" />
-          <p>Salaby er et digitalt læremiddel i alle fag for 1.-7. trinn og for alle aldergrupper i barnehagen.
-
-Salaby inneholder mer enn 4000 læringselementer fordelt på de ulike fagene. Rammen rundt innholdet er byen Salaby og karakterene som bor der. Alt innhold er utviklet av norske pedagoger og fagfolk. Salaby er lisensbasert.
-
-Salaby har fire hovedportaler for 1. - 4. trinn:
-- Sirkus (Skolestart)
-- Skoleveien (1. - 2. trinn)
-- Byparken (3. - 4. trinn)
-- Biblioteket (1. - 4. trinn)
+          <p>På mandag drar vi til Trondheim for å delta på konferansen Visjon 2030.
+Konferansen omtales som en nasjonal innovasjonsdugnad. Tema er hvordan verden kan oppnå de universelle bærekraftsmålene som skal vedtas i FN til høsten, og det blir et særlig fokus på helse, utdanning og hvordan norske, innovative løsninger kan bidra.
+Vår ambisjon er å bidra til enda flere barn lærer enda bedre. Vi vil fortsette å spille på lag med lærere og elever.
+Under konferansen i Trondheim er vi representert på fem programposter, og vi gleder oss til mange gode diskusjoner med andre norske aktører som brenner for det samme.
 
 Kanal S er den nye hovedportalen for 5. - 7. trinn.</p>
         </article>
