--- a/Salabytest/app/views/static_pages/info/omByparken.html.erb
+++ b/Salabytest/app/views/static_pages/info/omByparken.html.erb
@@ -57,7 +57,23 @@
       <div class="large-10 small-12 columns">
         <article>
           <h3>OM BYPARKEN</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.get mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.get mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+          <p>Barnehagene har nå fått et eget digitalt univers som heter Salaby Barnehage. Alt innhold er utviklet etter rammeplanen for barnehagen og kan brukes på PC, Mac, projektor og/eller digital tavle. Barnehagen betaler 3255,- pr. år og har da i 1 år tilgang til hele Salaby Barnehage.
+
+    
+
+Salaby Barnehage er delt opp i følgende områder:   
+
+Trampoline: er for førskolegruppen og inneholder pedagogiske spill og øvelser til 9 temaer. Til hvert av temaene finnes fine introduksjonsfilmer med barn i hovedrollene. Du finner digital språkstøtte med lyd for minoritetsspråklige på: arabisk, kurdisk, polsk, somali, tamil og urdu. Temaene i Trampoline er:   
+
+Farger
+Form og farge
+Sortering og måling
+Plassering
+Bokstaver og symboler  
+Tall
+Store og små
+Rim og stavelser
+Tegn og lag</p>
         </article>
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
