--- a/Salabytest/app/views/static_pages/info/omKanalS.html.erb
+++ b/Salabytest/app/views/static_pages/info/omKanalS.html.erb
@@ -58,7 +58,14 @@
       <div class="large-10 small-12 columns">
         <article>
           <h3>OM KANAL S</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.get mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.get mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+          <p>Kanal S er utviklet for elever og lærere på mellomtrinnet. I Kanal S vil du finne alle fag. Høsten 2013 foreligger fagene engelsk, norsk, matematikk, samfunnsfag og kunst og håndverk.
+
+Kanal S befinner seg i Nyhetstårnet i Salaby. Ved bruk av filmer, animasjoner, digitale tekstoppgaver og bilder presenteres stoffet levende og dynamisk. Innholdet er gjerne knyttet opp til aktuelle temaer, noe som gjør at det kan tas i bruk i forbindelse med årlige tradisjoner, nyhetssaker og markeringer gjennom året.
+
+• Fokus på grunnleggende ferdigheter 
+• Motiverende øvingsoppgaver
+• Elevene kan lagre arbeid underveis
+• Pedagogisk innhold i alle fag for 5-7.trinn</p>
         </article>
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
