--- a/Salabytest/app/views/static_pages/info/omSalaby.html.erb
+++ b/Salabytest/app/views/static_pages/info/omSalaby.html.erb
@@ -57,7 +57,15 @@
       <div class="large-10 small-12 columns">
         <article>
           <h3>OM SALABY</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.get mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.get mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+          <p>Salaby er et digitalt læremiddel i alle fag for 1.-7. trinn og for alle aldergrupper i barnehagen.
+
+Salaby inneholder mer enn 4000 læringselementer fordelt på de ulike fagene. Rammen rundt innholdet er byen Salaby og karakterene som bor der. Alt innhold er utviklet av norske pedagoger og fagfolk. Salaby er lisensbasert.
+
+Salaby har fire hovedportaler for 1. - 4. trinn:
+- Sirkus (Skolestart)
+- Skoleveien (1. - 2. trinn)
+- Byparken (3. - 4. trinn)
+- Biblioteket (1. - 4. trinn)</p>
         </article>
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
