fjernet loren ipsum på div. sider

--- a/Salabytest/app/views/static_pages/info/informasjon.html.erb
+++ b/Salabytest/app/views/static_pages/info/informasjon.html.erb
@@ -62,11 +62,8 @@
 
 Salaby inneholder mer enn 4000 læringselementer fordelt på de ulike fagene. Rammen rundt innholdet er byen Salaby og karakterene som bor der. Alt innhold er utviklet av norske pedagoger og fagfolk. Salaby er lisensbasert.
 
-Salaby har fire hovedportaler for 1. - 4. trinn:
-- Sirkus (Skolestart)
-- Skoleveien (1. - 2. trinn)
-- Byparken (3. - 4. trinn)
-- Biblioteket (1. - 4. trinn)</p>
+Salaby har fire hovedportaler for 1. - 4. trinn
+</p>
         </article>
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
