--- a/Salabytest/app/views/static_pages/info/omByparken.html.erb
+++ b/Salabytest/app/views/static_pages/info/omByparken.html.erb
@@ -57,23 +57,13 @@
       <div class="large-10 small-12 columns">
         <article>
           <h3>OM BYPARKEN</h3>
-          <p>Barnehagene har nå fått et eget digitalt univers som heter Salaby Barnehage. Alt innhold er utviklet etter rammeplanen for barnehagen og kan brukes på PC, Mac, projektor og/eller digital tavle. Barnehagen betaler 3255,- pr. år og har da i 1 år tilgang til hele Salaby Barnehage.
+          <p>Skoleveien er Salaby for 3.- 4.trinn og er de sidene som har eksistert lengst i Salaby.
+Sidene blir stadig oppdatert med nytt, pedagogisk materiell. 
 
-    
-
-Salaby Barnehage er delt opp i følgende områder:   
-
-Trampoline: er for førskolegruppen og inneholder pedagogiske spill og øvelser til 9 temaer. Til hvert av temaene finnes fine introduksjonsfilmer med barn i hovedrollene. Du finner digital språkstøtte med lyd for minoritetsspråklige på: arabisk, kurdisk, polsk, somali, tamil og urdu. Temaene i Trampoline er:   
-
-Farger
-Form og farge
-Sortering og måling
-Plassering
-Bokstaver og symboler  
-Tall
-Store og små
-Rim og stavelser
-Tegn og lag</p>
+Nytt og oppdatert innhold i engelsk, naturfag og norsk
+Morsmålssider på polsk, tamil og somali og tigrinja
+Språkstøtte for tamil, tyrkisk, arabisk, polsk, urdu, somali og kurdisk og vietnamesisk
+Mange nye bøker i biblioteket </p>
         </article>
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
