fjernet loren ipsum på div. sider

--- a/Salabytest/app/views/static_pages/info/kompetanse.html.erb
+++ b/Salabytest/app/views/static_pages/info/kompetanse.html.erb
@@ -262,13 +262,13 @@
             <dd class="accordion-navigation">
               <a href="#panel8b">Naturfag / Etter 4. årstrinn</a>
               <div id="panel8b" class="content">
-                Panel 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Panel 2. Mål for opplæring er at eleven skal kunne beskrive mangfold i naturen, kropp og helse, fenomener og stoffer, teknologi og design. 
               </div>
             </dd>
             <dd class="accordion-navigation">
               <a href="#panel9b">Naturfag / Etter 7. årstrinn</a>
               <div id="panel9b" class="content">
-                Panel 3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Panel 3. Mål for opplæring er at eleven skal kunne beskrive mangfold i naturen, kropp og helse, fenomener og stoffer, teknologi og design.
               </div>
             </dd>
           </dl>
