sendt inn kode igjen

--- a/Salabytest/app/assets/stylesheets/barn/forside_barn.css
+++ b/Salabytest/app/assets/stylesheets/barn/forside_barn.css
@@ -241,7 +241,7 @@ box-shadow: 0 0px 0 1px grey, 0 7px 0 1px grey, 0 14px 0 1px grey;
 
 
 
-/*!!!!!!!!!!!!STYLE FOR BACK TO TOP BTN!!!!!!!!!!!*/
+/*!!!!!!!!!!!!STYLE FOR BACK TO TOP BTN!!!!!!!!!!*/
 
 .cd-top {
   display: inline-block;
