sletta mange unødvendige kopi bilder fra rLE

--- a/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/hinduisme.html.erb
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forside Barn</title>
   <link rel="stylesheet" href="/assets/barn/religion.css" />
+  <%= javascript_include_tag "vendor/modernizr" %>
 </head>
 
 <body>
